[package]
name = "inferix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros"] }
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
async-trait = "0.1.79"
tera = "1.19.1"
chrono = "0.4.37"
jsonwebtoken = "9.3.0"
tower = "0.4.13"
clap = { version = "4.5.4", features = ["env", "derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
