[tool.poetry]
name = "inferix"
version = "0.1.0"
description = ""
authors = ["Noorain Panjwani <noorain.panjwani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.5.3"
aiohttp = {extras = ["speedups"], version = "^3.9.1"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
